# jega-lite

./: .gitignore  README.md  pyproject.toml
jenga_lite/: basis.py  utils.py
jenga_lite/corruptions/: generic.py  numerical.py  text.py
jenga_lite/evaluation/: basis.py  corruption_impact.py
jenga_lite/tasks/: income.py  openml.py
notebooks/: basic-example.ipynb
notebooks/.ipynb_checkpoints/: basic-example-checkpoint.ipynb
