[tool.poetry]
name = "jenga_lite"
version = "0.1.0"
description = "jenga_lite is a library that allows data science practitioners and researchers to study the effect of common data corruptions on the prediction quality of their ML models on tabular data. It is based on the popular Jenga library."
authors = ["Philipp Jung <philippjung@posteo.de>"]
license = "GPL-3.0 license"
readme = "README.md"
packages = [{include = "jenga_lite"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
jsonpickle = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
pytest = "^7.3.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
